--- a/design-with-tailwind-css-masterclass/public/index.html
+++ b/design-with-tailwind-css-masterclass/public/index.html
@@ -11,7 +11,7 @@
       <img class="h-10" src="/img/logo.svg" alt="Workcation" />
       <img
         class="mt-6 rounded-lg shadow-xl"
-        src="/img/beach-work.jpg"
+        src="/img/beach-work.jpeg"
         alt="Woman workcationing on the beach"
       />
       <h1 class="mt-6 text-2xl font-bold text-gray-900 leading-tight">
