--- a/design-with-tailwind-css-masterclass/public/index.html
+++ b/design-with-tailwind-css-masterclass/public/index.html
@@ -34,7 +34,7 @@
           <div class="mt-4 sm:mt-6">
             <a
               href="#"
-              class="inline-block px-5 py-3 rounded-lg shadow-lg bg-indigo-500 text-sm text-white uppercase tracking-wider font-semibold sm:text-base"
+              class="inline-block px-5 py-3 rounded-lg shadow-lg bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:shadow-outline active:bg-indigo-600 md:hover:bg-green-400 text-sm text-white uppercase tracking-wider font-semibold sm:text-base"
               >Book your escape</a
             >
           </div>
