--- a/design-with-tailwind-css-masterclass/public/index.html
+++ b/design-with-tailwind-css-masterclass/public/index.html
@@ -32,11 +32,8 @@
             vacation.
           </p>
           <div class="mt-4 sm:mt-6">
-            <a
-              href="#"
-              class="inline-block px-5 py-3 rounded-lg shadow-lg bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:shadow-outline active:bg-indigo-600 md:hover:bg-green-400 text-sm text-white uppercase tracking-wider font-semibold sm:text-base"
-              >Book your escape</a
-            >
+            <a href="#" class="btn btn-indigo">Book your escape</a>
+            <a href="#" class="btn btn-gray ml-2">Learn more</a>
           </div>
         </div>
       </div>
